Fixed controller diagram to be broader

--- a/bibtex/Thesis.bib
+++ b/bibtex/Thesis.bib
@@ -177,6 +177,12 @@ publisher = {Institute of Electrical and Electronics Engineers Inc.},
 title = {{PX4: A node-based multithreaded open source robotics framework for deeply embedded platforms}},
 year = {2015}
 }
+@misc{PX4_controller_diagrams,
+author = {PX4},
+title = {{Controller Diagrams | PX4 User Guide}},
+url = {https://docs.px4.io/master/en/flight_stack/controller_diagrams.html},
+urldate = {2021-09-13}
+}
 @article{Chen1999,
 abstract = {A new approach to model conversion of a state-delay system is introduced in this paper. The discrete-time model is especially derived from the continuous-time system, that it has a wider range for the sampling period in real implementation. A simple method is also proposed to determine the unknown state-delay time from the available discrete-time model, and the continuous-time model is established through some important results demonstrated in this paper.},
 author = {Chen, Chuen Ming and Wang, Kuang Hwa},
