--- a/control/diagrams/pid_architecture.tex
+++ b/control/diagrams/pid_architecture.tex
@@ -1,10 +1,10 @@
-\begin{figure}[h]
+\begin{figure}[htb]
       \centering
     
       % Define distances
       \def\blockheight{7em}
       \def\largeblockheight{1.45*\blockheight}
-      \def\blockwidth{3.9em}
+      \def\blockwidth{4.1em}
       \def\nodesep{1.25*\blockwidth}
     
       \footnotesize
@@ -77,8 +77,8 @@
       
       \end{tikzpicture}
       
-      \caption{Cascaded PID control architecture of PX4}
+      \caption{Cascaded PID control architecture of PX4 \cite{PX4_controller_diagrams}}
       \label{fig:pid_architecture}
-      
+
     \end{figure}
     
