--- a/control/diagrams/pid_architecture.tex
+++ b/control/diagrams/pid_architecture.tex
@@ -1,3 +1,4 @@
+% From: https://github.com/PX4/PX4-user_guide/blob/master/assets/diagrams/mc_control_arch_tikz.tex
 \begin{figure}[htb]
       \centering
     
