Added diagram of quaternion controller

--- a/control/control.tex
+++ b/control/control.tex
@@ -107,9 +107,12 @@
                 \end{cases} 
             \end{equation}
 
-            
-
             %  ?? Fix symbols
+
+            \input{control/diagrams/angle_controller.tex}
+            
+            Figure~\ref{fig:angle_controller}
+
 
         \FloatBarrier\section{Translational controller}
 
