--- a/control/diagrams/velocity_controller.tex
+++ b/control/diagrams/velocity_controller.tex
@@ -88,7 +88,7 @@
     
     \end{tikzpicture}
 
-    \caption{North veloicty controller \cite{PX4_controller_diagrams}}
+    \caption{North velcity controller \cite{PX4_controller_diagrams}}
     \label{fig:velocity_controller}
   
   \end{figure}
